--- a/backend/shield/Gemfile
+++ b/backend/shield/Gemfile
@@ -26,8 +26,12 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 gem 'mysql2', '>= 0.3.13', '< 0.5'
 
 gem 'rack-cors', :require => 'rack/cors'
-
+gem 'devise'
+gem 'devise_token_auth'
+gem 'omniauth'
 gem 'rails-api'
+gem 'roadie'
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
