--- a/backend/shield/config/database.yml
+++ b/backend/shield/config/database.yml
@@ -1,22 +1,44 @@
-default: &default
-  adapter: mysql2
-  encoding: utf8
-  pool: 5
-  username: root
-  password: admin
-  host: localhost
+# default: &default
+#   # adapter: mysql2
+#   # encoding: utf8
+#   # pool: 5
+#   # username: root
+#   # password: admin
+#   # host: localhost
+#   adapter: mysql2
+#   encoding: utf8
+#   database: shield_db
+#   username: lh_admin
+#   password: ankara06
+#   host: db4free.net
+#   port: 3306
 
 development:
-  <<: *default
+  adapter: mysql2
+  encoding: utf8
   database: shield_db
+  username: lh_admin
+  password: ankara06
+  host: db4free.net
+  port: 3306
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+    adapter: mysql2
+    encoding: utf8
+    database: shield_db
+    username: lh_admin
+    password: ankara06
+    host: db4free.net
+    port: 3306
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+    adapter: mysql2
+    encoding: utf8
+    database: shield_db
+    username: lh_admin
+    password: ankara06
+    host: db4free.net
+    port: 3306
